dev/monitoring/grafana-dashboard/grafana-ingressroute-tls.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: grafana
  namespace: monitoring
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`grafana.imroc.io`)
    kind: Rule
    services:
    - name: grafana
      port: 3000
  tls:
    secretName: grafana-imroc-io-tls
