dev/monitoring/grafana-dashboard/grafana-ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: grafana-http
  namespace: monitoring
spec:
  entryPoints:
    - web
  routes:
  - match: Host(`grafana.imroc.io`)
    kind: Rule
    services:
    - name: grafana
      port: 3000
    middlewares:
    - name: https-redirect
